--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: your awesome title
-page-title: your awesome page-title.
-home-title: your awesome home-title.
-description: description
+title: 喵君的胡思乱想
+page-title: Viva! Great World!
+home-title: 喵君的胡思乱想
+description: println "Hello friend!"
 ---
 
 {% include header.html %}
