--- a/tags.html
+++ b/tags.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: 标签
-page-title: tags
-home-title: Let's pick something.
+title: 关键词
+page-title: Keyword
+home-title: 嘿，是关键词耶
 description:
 ---
 
