--- a/timeline.html
+++ b/timeline.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: 时间线
-page-title: timeLine
-home-title: Sort by timeline.
+page-title: TimeLine
+home-title: 心路历程
 description:
 ---
 
