修改主页信息
Took 8 minutes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: 喵君的胡思乱想
+title: 想变得帅气！
 page-title: Viva! Great World!
-home-title: 喵君的胡思乱想
+home-title: 喵君，想变得帅气！
 description: println "Hello friend!"
 ---
 
