--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: 想变得帅气！
+title: 一起变得帅气！
 page-title: Viva! Great World!
-home-title: 喵君，想变得帅气！
+home-title: 两人的实验室！
 description: println "Hello friend!"
 ---
 
